--- a/session10/DOM2_Assignment-2/todo_app.css
+++ b/session10/DOM2_Assignment-2/todo_app.css
@@ -1,8 +1,11 @@
 h1 {
     text-align: center;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 40px;
+    font-size: 70px;
     color:white;
+    /* text-decoration:underline */
+    
+  
 }
 h2 {
     margin-left:20px;
@@ -87,3 +90,11 @@ ul li:nth-child(even){
   background-color: #f44336;
   color: white;
 }
+.checkBox {
+    position: absolute;
+    left: 0px;
+    top: 12px;
+    padding: 12px 16px 12px 16px;
+    
+  }
+
