--- a/stopWatch/stopwatch.css
+++ b/stopWatch/stopwatch.css
@@ -15,8 +15,8 @@ h1 {
     width:300px;
     margin : 100px auto;
     padding: 30px 40px 60px;
-    box-shadow: 6px -6px 8px #9d9d9d,
-    -6px 6px 8px #ffffff;
+    box-shadow: 6px -6px 8px #000000,
+    -6px 6px 8px #000000;
     border-radius: 38px;
 }
 #mainStopWatch span {
@@ -24,8 +24,8 @@ h1 {
     padding: 5px;
     margin: 20px 5px;
     margin-bottom:20px;
-    box-shadow: 6px -6px 8px #9d9d9d,
-    -6px 6px 8px #ffffff;
+    box-shadow: 6px -6px 8px #000000,
+    -6px 6px 8px #000000;
     font-size: 35px;
     border-radius: 5px;
 }
@@ -33,8 +33,8 @@ h1 {
     border: none;
     padding: 10px;
     font-size: 30px;
-    box-shadow: 6px -6px 8px #9d9d9d,
-    -6px 6px 8px #ffffff;
+    box-shadow: 6px -6px 8px #000000,
+    -6px 6px 8px #000000;
     border-radius: 10px;
     margin: 20px 5px;
 
